--- a/2-Ignite-Timer/.eslintrc.json
+++ b/2-Ignite-Timer/.eslintrc.json
@@ -11,6 +11,7 @@
 			"endOfLine": "auto"
 		}],
 		"@typescript-eslint/no-non-null-assertion": "off",
+		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/no-empty-interface": [
 		"error",
 		{
